# therapeutic-gamification-app

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_DEPLOYMENT_INSTRUCTIONS.md  README.md  api_comprehensive_validation_report.json  api_integration_validation_report.json  api_validation_final_report.json  api_validation_integrated_report_20250729_203220.json  api_validation_integrated_report_20250729_204227.json  api_validation_integrated_report_20250730_093631.json  auth_openapi.json  authenticated_deploy.py  auto_deployment_fix.py  auto_deployment_setup.py  check_deployment_status.py  check_github_actions.py  commit_and_deploy.bat  complete_auto_deploy.py  core_game_openapi.json  create_github_repo.py  demo_reincarnation_story.py  demo_reincarnation_story.py.backup  deploy_local.py  deploy_status_check.py  deployment_checklist.md  deployment_completion_summary.md  deployment_success_confirmation.py  deployment_success_monitor.py  deployment_trigger.txt  direct_github_deploy.py  execute_git_commands.py  final_auto_deploy.py  final_deployment_automation.py  final_performance_test.py  fix_critical_paths.py  fix_deployment_errors.py  fix_github_actions_v4.py  (+125 more)
.github/workflows/: ci-cd-pipeline.yml
docs/: github_secrets_setup.md  index.html  investor_proposal.md  strategy_guide.md  user_manual.md
frontend/: index.html  package.json  test_adhd_ux.js
frontend/components/: index.ts
frontend/src/: App.tsx  main.tsx
infrastructure/production/: alerting-config.yaml  ci_cd_setup_report.md  cloud-armor-waf.yaml  cloud-run.yaml  cloud-storage-config.yaml  deploy_script.py  deployment-completion-report.md  deployment-script.sh  final_integration_test.py  final_release_preparation.py  firestore-security-rules.js  generate_deployment_report.py  get_last_stable_revision.py  iam-conditions.yaml  logging-config.yaml  monitoring-config.yaml  monitoring-dashboard.json  monitoring-setup-script.sh  performance_scalability_test.py  post_deployment_monitoring.py  (+9 more)
release_reports/: api_documentation.md  deployment_guide.md  integration_test_report.md  integration_test_results.json  operations_manual.md  troubleshooting_guide.md  user_manual_updated.md
services/: implementation_summary_brushup.md
shared/: __init__.py
(+563 files in other folders)
